Change of image according to direction of mov.

--- a/src/app/lgame/playground/playground.component.html
+++ b/src/app/lgame/playground/playground.component.html
@@ -6,10 +6,10 @@
     <canvas #lgamecanvasrabbits id="lgame-canvas-rabbits" class="lgame-canvas lgame-elms"></canvas>
     <canvas #lgamecanvaslions id="lgame-canvas-lions" class="lgame-canvas lgame-elms"></canvas>
     <div id="lgame-controls">
-        <button id="lg-control-left" (click)="reactToBtnInst('left')"><</button>
-        <button id="lg-control-up" (click)="reactToBtnInst('up')">^</button>
-        <button id="lg-control-down" (click)="reactToBtnInst('down')">D</button>
-        <button id="lg-control-right" (click)="reactToBtnInst('right')">></button>
+        <button id="lg-control-left" (click)="reactToBtnInst(3)"><</button>
+        <button id="lg-control-up" (click)="reactToBtnInst(0)">^</button>
+        <button id="lg-control-down" (click)="reactToBtnInst(2)">D</button>
+        <button id="lg-control-right" (click)="reactToBtnInst(1)">></button>
         <button (click)="play()">PLAY</button>
 </div>
 </div>
